# handlers/ping.go
@@ -6,13 +6,13 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// Ping godoc
-// @Summary Ping server
-// @Description Check if server is running
-// @Tags utility
-// @Produce json
-// @Success 200 {object} map[string]string
-// @Router /ping [get]
+// Ping
+// @Summary      Health check
+// @Description  Check if the server is running
+// @Tags         System
+// @Produce      json
+// @Success      200  {object}  map[string]string "message: pong"
+// @Router       /ping [get]
 func (h *Handler) Ping(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{
 		"message": "pong",
